@@ -3652,7 +3652,14 @@ cm_value (int arg, int start_pos, int end_pos)
          among other things.  */
 
       if (value)
-        execute_string ("%s", value);
+	{
+	  /* We need to get past the closing brace since the value may
+	     expand to a context-sensitive macro (e.g. @xref) and produce
+	     spurious warnings */
+	  input_text_offset++; 
+	  execute_string ("%s", value);
+	  input_text_offset--;
+	}
       else
 	{
           warning (_("undefined flag: %s"), name);
